--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,9 @@
 
 .container{
 
-width: 70%;
+width: 80%;
 margin: auto;
 margin-top: 15px;
-
     /* DEBUG */
     background-color: rgb(218 165 32);
     border: 1px solid black;
@@ -27,5 +26,41 @@ margin-top: 15px;
     padding: 2px;
     display: flex;
     justify-content: space-between;
+}
+
+.first-main{
+    height: 300px;
+    justify-content: center;
+    /* DEBUG */
+    background-color: rgb(0 12 140);
+    border: 1px solid black;
+}
+
+.pink-box{
+    width: 60%;
+    margin: auto;
+    height: 70%;
+    margin-top:40px;
+    margin-bottom: 40px;
+
+    /* DEBUG */
+    border: 1px solid black;
+    background-color: rgb(238 130 238);;
+}
+
+.second-main{
+    height: 300px;
+    justify-content: center;
+    /* DEBUG */
+    background-color: white;
+    border: 1px solid black;
+
+}
+.blue-box{
+    border-bottom: 20px;
+
+/* DEBUG */
+border: 1px solid black;
+background-color:hsl(209.6deg 100% 55.88%) ;
 }
 
