--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,8 @@ margin-top: 15px;
 
 .first-main{
     height: 300px;
-    justify-content: center;
-    /* DEBUG */
+    
+        /* DEBUG */
     background-color: rgb(0 12 140);
     border: 1px solid black;
 }
@@ -49,18 +49,86 @@ margin-top: 15px;
 }
 
 .second-main{
-    height: 300px;
+    padding: 20px 0;
+    display: flex;
     justify-content: center;
     /* DEBUG */
     background-color: white;
     border: 1px solid black;
-
+    
 }
 .blue-box{
-    border-bottom: 20px;
-
-/* DEBUG */
-border: 1px solid black;
-background-color:hsl(209.6deg 100% 55.88%) ;
+    width: 60%;
+    height: 200px;
+    display: flex;    
+    /* DEBUG */
+    border: 1px solid black;
+    background-color:hsl(209.6deg 100% 55.88%) ;
 }
+
+.rose-box{
+    width: 40%;
+    height: 200px;
+    display: flex;
+    /* DEBUG */
+    border: 1px solid black;
+    background-color:hsl(303, 80%, 36%) ;
+
+}
+.row-main{
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+}
+
+.background{
+    background-color: hsl(0deg 0% 82.75%)
+}
+
+.inverter{
+    flex-direction: row-reverse;
+}
+
+.gray-box{
+    display: flex;
+    justify-content: center;
+    height: 300px;
+    background-color: hsl(0deg 0% 82.75%);
+    padding: 20px 0;
+    /* DEBUG */
+    border: 1px solid black;
+}
+
+.green-box{
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    
+
+    /* DEBUG */
+    border: 1px solid black;
+    background-color: hsl(120deg 60.69% 33.92%);
+}
+
+.last-sec{
+    display: flex;
+    justify-content: center;
+    height: 300px;
+    background-color: hsl(0deg 0% 82.75%);
+    
+
+
+
+    /* DEBUG */
+    border: 1px solid white;
+    background-color: black;
+
+}
+
+
+
+
 
